--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -4,6 +4,7 @@ $show-home-image: true;
 $home-image: url(../img/background.jpg);
 $background-opacity: 0.9;
 $portrait: url(../img/portrait.jpg);
+$portrait-small: url(../img/portrait_small.jpg);
 
 @mixin easeOut {
   transition: all 0.5s ease-out;
@@ -27,5 +28,29 @@ $portrait: url(../img/portrait.jpg);
         background: rgba($primary-color, $background-opacity);
       }
     }
+  }
+}
+
+@mixin mediaSm {
+  @media screen and (max-width: 500px) {
+    @content;
+  }
+}
+
+@mixin mediaMd {
+  @media screen and (max-width: 768px) {
+    @content;
+  }
+}
+
+@mixin mediaLg {
+  @media screen and (min-width: 769px) and (max-width: 1170px) {
+    @content;
+  }
+}
+
+@mixin mediaXl {
+  @media screen and (min-width: 1171px) {
+    @content;
   }
 }
