--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -31,6 +31,14 @@ $portrait-small: url(../img/portrait_small.jpg);
   }
 }
 
+@function set-text-color($color) {
+  @if (lightness($color) > 40) {
+    @return #000;
+  } @else {
+    @return #fff;
+  }
+}
+
 @mixin mediaSm {
   @media screen and (max-width: 500px) {
     @content;
