--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -1,13 +1,23 @@
 // Widescreens
 @include mediaXl {
+  .projects {
+    grid-template-columns: repeat(4, 1fr);
+  }
 }
 
 // Desktops & Laptops
 @include mediaLg {
+  .projects {
+    grid-template-columns: repeat(3, 1fr);
+  }
 }
 
 // Tablets
 @include mediaMd {
+  .projects {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
   main {
     align-items: center;
     text-align: center;
@@ -60,6 +70,9 @@
 
 // Phones
 @include mediaSm {
+  .projects {
+    grid-template-columns: 1fr;
+  }
   main#home h1 {
     margin-top: 10vh;
   }
